fixing breakpoint on mobile for blueprint page

--- a/app/blueprints/page.module.scss
+++ b/app/blueprints/page.module.scss
@@ -70,6 +70,9 @@
   min-height: unset;
 }
 @media screen and (max-width: 992px) { 
+  .blueprintSVG {
+    grid-template-columns: 1fr;
+  }
 }
 .blueprintSVG {
   display: grid;
